# qt-device-imitator

./: CMakeLists.txt
server/: README.md  helper.py  modbus_server.py
src/: config.h  device_imitator.cpp  device_imitator.h  main.cpp  modbus_client.cpp  modbus_client.h  modbus_server.cpp  modbus_server.h  router.cpp  router.h  temperature_meter.cpp  temperature_meter.h
src/devices/: b5_100_server.cpp  b5_100_server.h  b5_107_server.cpp  b5_107_server.h  dsvch_server.cpp  dsvch_server.h  keysight_33510b_server.cpp  keysight_33510b_server.h  trm10_server.cpp  trm10_server.h  trm210_server.cpp  trm210_server.h
test/: CMakeLists.txt  b5_107_server.cpp  b5_107_server.h
test/src/: main.cpp  modbus_client.cpp  modbus_client.h  tcp_socket_client.cpp  tcp_socket_client.h  test.cpp
